--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Henry Rincon",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^6.8.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -17,8 +18,10 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "uuid": "^9.0.0"
   }
 }
